# chora

./: .gitignore  404.html  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  release.yml
api_reference/: index.html
core_concepts/: index.html
data/examples/: urban_commuter.json  walking_wellbeing.json
derivation/: index.html
docs/: api_reference.md  core_concepts.md  derivation.md  getting_started.md  index.md  queries.md  theory.md
docs/guides/: affective-mapping.md  gps-to-places.md  h3-indexing.md  index.md  llm-integration.md  practice-detection.md  streaming.md  vibe-search.md  visualization.md
examples/: README.md  affective_mapping.py  basic_walk.py  familiarity_dynamics.py  graph_export.py  graph_queries.py  load_geojson_pois.py  load_gpx_traces.py  place_diary.py  practice_detection.py  server_demo.py  temporal_queries.py  urban_mobility.py  vector_search.py
getting_started/: index.html
guides/: index.html
guides/affective-mapping/: index.html
guides/gps-to-places/: index.html
guides/h3-indexing/: index.html
guides/llm-integration/: index.html
guides/practice-detection/: index.html
guides/streaming/: index.html
guides/vibe-search/: index.html
guides/visualization/: index.html
notebooks/: 01_quick_start.ipynb  02_gps_to_places.ipynb  03_practice_detection.ipynb  04_affective_mapping.ipynb
queries/: index.html
search/: search_index.json
src/chora/: __init__.py  cli.py
src/chora/adapters/: __init__.py  base.py  memory.py  neo4j.py  postgis.py  redis.py
src/chora/core/: __init__.py  affect.py  agent.py  context.py  edge.py  encounter.py  exceptions.py  familiarity.py  graph.py  h3.py  liminality.py  meaning.py  node.py  practice.py  provenance.py  spatial_extent.py  temporal.py  types.py  uncertainty.py  validation.py
src/chora/derive/: __init__.py  affect.py  encounters.py  (+5 more)
tests/: conftest.py
tests/unit/: test_adapters.py  test_core_graph.py  test_core_temporal.py  test_core_types.py  test_derive.py  test_embeddings.py  test_practices.py  test_queries.py  test_server.py
theory/: index.html
(+19 files in other folders)
